--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -22,10 +22,14 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
             span.sr-only (current)
         if !session.passport
           li.nav-item
+            a.nav-link(href='/articles/index') Articles
+          li.nav-item
             a.nav-link(href='/auth#register') Register
           li.nav-item
             a.nav-link(href='/auth#login') Login
         else
+          li.nav-item
+            a.nav-link(href='/articles/app') Articles
           li.nav-item
             a.nav-link(href='/users/app') Users
           li.nav-item
