--- a/views/articles/view.pug
+++ b/views/articles/view.pug
@@ -1,8 +1,8 @@
 extends ../layout
 block content
   article
-    h1= article.title
+    //h1= article.title
     div
-      - var date = new Date(article.published).toISOString().slice(0, 19).replace('T', ' ');
-      small Posted: #{date}
-    div!= article.body
+      //- var date = new Date(article.published).toISOString().slice(0, 19).replace('T', ' ');
+      //small Posted: #{date}
+    //div!= article.body
