All minimum site functionality

--- a/views/articles/index.pug
+++ b/views/articles/index.pug
@@ -1,9 +1,9 @@
 extends ../layout
 
 block content
-
+  
   h1 Blog
-
+  
   div#app
 
-  script(src='/dist/js/articles.app.min.js')
+  script(src='/dist/js/articles.min.js')
