--- a/views/articles/view.pug
+++ b/views/articles/view.pug
@@ -1,8 +1,7 @@
 extends ../layout
+
 block content
-  article
-    //h1= article.title
-    div
-      //- var date = new Date(article.published).toISOString().slice(0, 19).replace('T', ' ');
-      //small Posted: #{date}
-    //div!= article.body
+
+  div#app
+
+  script(src='/dist/js/articles.min.js')
