--- a/views/includes/navbar.pug
+++ b/views/includes/navbar.pug
@@ -20,16 +20,18 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
           a.nav-link(href='/')
             | Home
             span.sr-only (current)
-        if !session.passport
+        if !session.passport.user
           li.nav-item
-            a.nav-link(href='/articles/index') Articles
+            a.nav-link(href='/articles') Articles
           li.nav-item
             a.nav-link(href='/auth#register') Register
           li.nav-item
             a.nav-link(href='/auth#login') Login
         else
           li.nav-item
-            a.nav-link(href='/articles/app') Articles
+            a.nav-link(href='/articles/app') Manage Articles
+          li.nav-item
+            a.nav-link(href='/articles/') Articles
           li.nav-item
             a.nav-link(href='/users/app') Users
           li.nav-item
